--- a/css/survey.css
+++ b/css/survey.css
@@ -125,6 +125,14 @@ pre.resp {
 	padding: 3px 10px;
 	border: 1px dotted #666;
 	border-radius: 3px;
+	width: 100%;
+}
+div.befixd {
+	padding: 3px 10px;
+	border: 1px dotted #666;
+	border-radius: 3px;
+	/* background-color: #ccc; */
+	width: 7.25in; 
 }
 .font-smaller {
 	font-size: 50%;
